--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 ClimaCorePlots = "cf7c7e5a-b407-4c48-9047-11a94a308626"
 ClimaCoreVTK = "c8b6d40d-e815-466f-95ae-c48aefa668fa"
 CloudMicrophysics = "6a9e3e04-43cd-43ba-94b9-e8782df3c71b"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
@@ -19,6 +20,7 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LambertW = "984bce1d-4616-540c-a9ee-88d1112d94c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -36,6 +38,7 @@ ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.9"
+Colors = "0.12"
 Dierckx = "0.5"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
@@ -45,6 +48,7 @@ Insolation = "0.3"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
+NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
 RRTMGP = "0.6"
 StaticArrays = "1"
