--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -377,6 +377,12 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":balloon: SCM EDMF: Nieuwstadt"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Nieuwstadt --split_ode false --ode_algo ODE.Euler --dt_save_to_sol 5mins --z_elem 75 --z_stretch false --z_max 3750 --job_id edmf_nieuwstadt --dt 1secs --t_end 8hours --regression_test true --anelastic_dycore true --apply_limiter false --debugging_tc true --dt_save_to_disk 5mins"
+        artifact_paths: "edmf_nieuwstadt/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":balloon: Single column EDMF Rico"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --ls_adv Rico --subsidence Rico --moist equil --precip_model 1M --turbconv edmf --turbconv_case Rico --split_ode false --ode_algo ODE.Euler --dt_save_to_sol 5mins --z_elem 80 --z_stretch false --z_max 4000 --job_id edmf_rico --dt 1secs --t_end 24hours --regression_test true --anelastic_dycore true --apply_limiter false --debugging_tc true --dt_save_to_disk 8mins"
         artifact_paths: "edmf_rico/*"
