--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -71,6 +71,7 @@ AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
 ClimaCore = "0.10"
 CloudMicrophysics = "0.9"
+ClimaTimeSteppers = "0.3"
 Dierckx = "0.5"
 DiffEqBase = "5, 6"
 Distributions = "0.25"
