--- a/test/Project.toml
+++ b/test/Project.toml
@@ -75,6 +75,7 @@ ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.9"
+ClimaTimeSteppers = "0.3"
 Dierckx = "0.5"
 DiffEqBase = "5, 6"
 DiffEqCallbacks = "2"
