--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -335,7 +335,7 @@ steps:
           slurm_mem: 20GB
 
       - label: ":computer: Unthreaded performance target"
-        command: "julia --color=yes --project=perf perf/benchmark.jl --perf_summary true --job_id perf_target_unthreaded --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Bomex --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist equil --precip_model 0M --z_stretch false --dt 0.1secs --t_end 1secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
+        command: "julia --color=yes --project=perf perf/benchmark.jl --perf_summary true --job_id perf_target_unthreaded --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist dry --precip_model 0M --z_stretch false --dt 0.1secs --t_end 1secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
         artifact_paths: "perf_target_unthreaded/*"
         agents:
           slurm_mem: 20GB
