--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -52,7 +52,7 @@ steps:
           slurm_ntasks: 32
       
       - label: ":computer: baroclinic wave (ρe_tot) high resolution topography (dcmip)"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_highres_topography --DCMIP200 --rayleigh_sponge true --viscous_sponge true"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_highres_topography --topography DCMIP200 --rayleigh_sponge true --viscous_sponge true"
         artifact_paths: "longrun_bw_rhoe_highres_topography/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
